--- a/login.html
+++ b/login.html
@@ -18,7 +18,7 @@
     <input type="submit" value="Log In">
     <br>
     <br>
-    <a href="forget-pass.html">Forgotten Password?</a>
+    <a href="forget-pass.html" target="blank">Forgotten Password?</a>
     <br><br>
     <a href="signup.html">Create New Account</a>
 
