--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
     <br>
     <a href="forget-pass.html" target="blank">Forgotten Password?</a>
     <br><br>
-    <a href="signup.html">Create New Account</a>
+    <a href="signup.html" target="blank">Create New Account</a>
 
 </body>
 </html>
