--- a/forget-pass.html
+++ b/forget-pass.html
@@ -1,22 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Forget Password</title>
+    <title>Forgotten Password | Can't Log In</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h2>Find Your Account</h2>
-    <br>
-    <p>Please enter your email address or mobile number to search for your account.</p>
-    <br><br>
-    <input type="email" placeholder="Email address or Phone number">
-    <br><br>
-    <button>Cancel</button>
-    <button>Search</button>
-    <br><br>
-    <button><a href="login.html">Log In</a></button>
-    
+    <header class="full-head">
+        <h1 class="left-name"><a href="/login.html">Bangladesh</a></h1>
+        <div class="right-bar">
+            <ul class="nav-bar">
+                <form>
+                    <li class="li-email"><input type="text" placeholder="Email or Phone"></li>
+                    <li class="li-pass"><input type="password" placeholder="Password"></li>
+                    <li class="li-submit"><input type="submit" value="Log In"></li>
+                    <li class="li-forg-acc"><a href="login.html" target="blank">Forgotten Account?</a></li>
+                </form>       
+            </ul>
+        </div>
+    </header>
+
+    <div class="find-body">
+        <h2> <b>Find Your Account</b></h2>
+        <hr class="find-hr1">
+        <p class="find-para">Please enter your email address or mobile number to search for your account.</p>
+        <form class="find-body-email">
+            <input class="find-email" type="text" placeholder="Email address or mobile number">
+            <hr class="find-hr2">
+            <a href="login.html" target="blank"><input class="find-cancel" type="reset" value="Cancel"></a>
+            <input class="find-search" type="submit" value="Search">
+        </form>
+    </div>
 </body>
 </html>
