--- a/login.html
+++ b/login.html
@@ -4,23 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Log In</title>
+    <title>Log in</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Log In</h1>
+    <h1 class="bang">Bangladesh</h1>
     <br>
+    <p class="para">Bangladesh, where you will find a lot of chutiya public.</p>
 
-    <input type="email" placeholder="Email address or Phone number">
-    <br><br>
-    <input type="password" placeholder="Password">
-    <br>
-    <br>
-    <input type="submit" value="Log In">
-    <br>
-    <br>
-    <a href="forget-pass.html" target="blank">Forgotten Password?</a>
-    <br><br>
-    <a href="signup.html" target="blank">Create New Account</a>
-
+    <form class="box">
+        <input class="email" type="email" placeholder="Email address or Phone number">
+        <br>
+        <input class="pass" type="password" placeholder="Password">
+        <br>
+        <input class="submit" type="submit" value="Log In">
+        <br>
+        <a class="forget" href="forget-pass.html" target="blank">Forgotten Password?</a>
+        <br>
+        <hr class="line">
+        <a class="create" href="signup.html" target="blank">Create New Account</a>
+    </form>
 </body>
 </html>
