--- a/signup.html
+++ b/signup.html
@@ -5,9 +5,173 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Sign Up</h1>
+    <div class="sign-up-body">
+        <h1 class="sign-up">Sign Up</h1>
+        <a href="login.html"><img class="sign-up-img-cross" src="	https://static.xx.fbcdn.net/rsrc.php/v3/y2/r/__geKiQnSG-.png" alt="">
+        </a>
+        <p class="quick">It's quick and easy.</p>
+        <hr class="sign-up-hr">
+
+        <form>
+            <input class="sign-up-first-name" type="text" placeholder="First name">
+            <input class="sign-up-surname" type="text" placeholder="Surname">
+            <br>
+            <input class="sign-up-email" type="email" placeholder="Mobile number or email address">
+            <br>
+            <input class="sign-up-pass" type="password" placeholder=" New password">
+            <br>
+            <label class="date-of-birth" for="Date of birth">Date of birth?</label>
+            <br>
+            <select class="sign-up-day" name="day" id="day">
+                <option>1</option>
+                <option>2</option>
+                <option>3</option>
+                <option>4</option>
+                <option>5</option>
+                <option>6</option>
+                <option>7</option>
+                <option>8</option>
+                <option>9</option>
+                <option>10</option>
+                <option>11</option>
+                <option>12</option>
+                <option>13</option>
+                <option>14</option>
+                <option>15</option>
+                <option>16</option>
+                <option>17</option>
+                <option>18</option>
+                <option>19</option>
+                <option>20</option>
+                <option>21</option>
+                <option>22</option>
+                <option>23</option>
+                <option>24</option>
+                <option>25</option>
+                <option>26</option>
+                <option>27</option>
+                <option>28</option>
+                <option>29</option>
+                <option>30</option>
+                <option>31</option>
+            </select>
+            <select class="sign-up-month" name="month" id="month">
+                <option>January</option>
+                <option>February</option>
+                <option>March</option>
+                <option>April</option>
+                <option>May</option>
+                <option>June</option>
+                <option>July</option>
+                <option>August</option>
+                <option>September</option>
+                <option>October</option>
+                <option>November</option>
+                <option>December</option>
+            </select>
+            <select class="sign-up-year" name="year" id="year">
+                <option value="2022">2022</option>
+                <option value="2021">2021</option>
+                <option value="2020">2020</option>
+                <option value="2019">2019</option>
+                <option>2018</option>
+                <option>2017</option>
+                <option>2016</option>
+                <option>2015</option>
+                <option>2014</option>
+                <option>2013</option>
+                <option>2012</option>
+                <option>2011</option>
+                <option>2010</option>
+                <option>2009</option>
+                <option>2008</option>
+                <option>2007</option>
+                <option>2006</option>
+                <option>2005</option>
+                <option>2004</option>
+                <option>2003</option>
+                <option>2002</option>
+                <option>2001</option>
+                <option>2000</option>
+                <option>1999</option>
+                <option>1998</option>
+                <option>1997</option>
+                <option>1996</option>
+                <option>1995</option>
+                <option>1994</option>
+                <option>1993</option>
+                <option>1992</option>
+                <option>1991</option>
+                <option>1990</option>
+                <option>1989</option>
+                <option>1988</option>
+                <option>1987</option>
+                <option>1986</option>
+                <option>1985</option>
+                <option>1984</option>
+                <option>1983</option>
+                <option>1982</option>
+                <option>1981</option>
+                <option>1980</option>
+                <option>1979</option>
+                <option>1978</option>
+                <option>1977</option>
+                <option>1976</option>
+                <option>1975</option>
+                <option>1974</option>
+                <option>1973</option>
+                <option>1972</option>
+                <option>1971</option>
+                <option>1970</option>
+                <option>1969</option>
+                <option>1968</option>
+                <option>1966</option>
+                <option>1965</option>
+                <option>1964</option>
+                <option>1963</option>
+                <option>1962</option>
+                <option>1961</option>
+                <option>1960</option>
+                <option>1959</option>
+                <option>1958</option>
+                <option>1957</option>
+                <option>1956</option>
+                <option>1955</option>
+                <option>1954</option>
+                <option>1953</option>
+                <option>1952</option>
+                <option>1951</option>
+                <option>1950</option>
+            </select>
+            <br>
+            <label class="sign-up-gender" for="gender">Gender?</label>
+            <br>
+            <div class="gender-female">
+                <label class="sign-up-female" for="female">Female</label>
+                <input class="sign-up-female-radio" type="radio" id="female">
+            </div>
+            <div class="gender-male">
+                <label class="sign-up-male" for="male">Male</label>
+                <input class="sign-up-male-radio" type="radio" id="male">
+            </div>
+            <div class="gender-custom">
+                <label class="sign-up-custom" for="custom">Custom</label>
+                <input class="sign-up-custom-radio" type="radio" id="custom">
+            </div>
+        </form>
+        <p class="sign-up-para">By clicking Sign Up, you agree to our Terms, Data Policy and Cookie Policy. You may receive SMS notifications from us and can opt out at any time.</p>
+        <button class="sign-up-sign-up">Sign Up</button>
+    </div>
+    
+</body>
+</html>
+
+
+
+<!-- <h1>Sign Up</h1>
     <p>It's Quick and easy</p>
 
     <form autocomplete="on">
@@ -38,6 +202,4 @@
         <button>Submit</button>
     </form>
     <br><br>
-    <a href="login.html">If you have already an account, click here!</a>
-</body>
-</html>
+    <a href="login.html" target="blank">If you have already an account, click here!</a> -->
