--- a/forget-pass.html
+++ b/forget-pass.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <header class="full-head">
-        <h1 class="left-name"><a href="/login.html">Bangladesh</a></h1>
+        <h1 class="left-name"><a href="login.html">Bangladesh</a></h1>
         <div class="right-bar">
             <ul class="nav-bar">
                 <form>
